--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -1,7 +1,6 @@
 {% extends 'base.html'%}
-
+{% block title %}  | Dashboard {% endblock %}
 {% block content %}
-
 
 <!-- Sub banner start -->
 <div class="sub-banner overview-bgi">
