--- a/templates/cars/cars.html
+++ b/templates/cars/cars.html
@@ -1,4 +1,6 @@
 {% extends 'base.html'%}
+{% block title %}  | Car Inventory  {% endblock %}
+
 {% load static%}
 {% load humanize %}
 {% block content%}
