--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+
+{% block title %}  | Home   {% endblock %}
 {% load static %}
 {% load humanize %}
 {% block content %}
