--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -2,6 +2,8 @@
 {% block title %}  | Log In {% endblock %}
 {% load static %}
 
+{% load socialaccount %}
+{% load providers_media_js %}
 {% block content %}
 
 <div class="sub-banner overview-bgi">
@@ -49,8 +51,8 @@
                       </div>
                       <div class="clearfix"></div>
                       <ul class="social-list">
-                          <li><a href="#" class="facebook-bg"><i class="fa fa-facebook facebook-i"></i><span>Facebook</span></a></li>
-                          <li><a href="#" class="google-bg"><i class="fa fa-google google-i"></i><span>Google</span></a></li>
+                          <li><a href="{% provider_login_url 'facebook' method='js_sdk' %}" class="facebook-bg"><i class="fa fa-facebook facebook-i"></i><span>Facebook</span></a></li>
+                          <li><a href="{% provider_login_url 'google' %}" class="google-bg"><i class="fa fa-google google-i"></i><span>Google</span></a></li>
                       </ul>
                   </form>
                   <p>Don't have an account? <a href="{% url 'register' %}" class="thembo"> Register here</a></p>
