--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,7 +1,8 @@
 {% extends 'base.html'%}
 {% block title %}  | Register {% endblock %}
 {% load static %}
-
+{% load socialaccount %}
+{% load providers_media_js %}
 {% block content %}
 
 <div class="sub-banner overview-bgi">
@@ -66,8 +67,8 @@
                       </div>
                       <div class="clearfix"></div>
                       <ul class="social-list">
-                          <li><a href="#" class="facebook-bg"><i class="fa fa-facebook facebook-i"></i><span>Facebook</span></a></li>
-                          <li><a href="#" class="google-bg"><i class="fa fa-google google-i"></i><span>Google</span></a></li>
+                          <li><a href="{% provider_login_url 'facebook' method='js_sdk' %}" class="facebook-bg"><i class="fa fa-facebook facebook-i"></i><span>Facebook</span></a></li>
+                          <li><a href="{% provider_login_url 'google' %}" class="google-bg"><i class="fa fa-google google-i"></i><span>Google</span></a></li>
                       </ul>
                   </form>
                   <p>Already a member? <a href="{% url 'login' %}" class="thembo"> Login here</a></p>
