--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -25,8 +25,10 @@
           <h1>Contact <span>Us</span></h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
       </div>
-      <form action="#" method="POST" enctype="multipart/form-data">
-          <div class="row">
+      <form action="{% url 'contact' %}" method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            {% include 'includes/messages.html'%}
+            <div class="row">
               <div class="col-lg-7">
                   <div class="row">
                       <div class="col-md-6 text-left">
