--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% load socialaccount %}
-{% load providers_media_js %}
+{% comment %} {% load providers_media_js %} {% endcomment %}
 {% block content %}
 
 <div class="sub-banner overview-bgi">
