--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -2,7 +2,7 @@
 {% block title %}  | Register {% endblock %}
 {% load static %}
 {% load socialaccount %}
-{% load providers_media_js %}
+{% comment %} {% load providers_media_js %} {% endcomment %}
 {% block content %}
 
 <div class="sub-banner overview-bgi">
